Added buttons Changed up the css file to go more with the concept design Added media links

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@ body{
 	background-position: right top;
 }
 
+/* header style */
+
 header{
 	width: 100%;
 	height: auto;
@@ -66,7 +68,7 @@ header{
 	height: auto;
 	display: table;
 	float: left;
-	padding-top: 35px;
+	padding-top: 28px;
 	padding-right: 75px;
 }
 
@@ -79,6 +81,7 @@ header{
 	vertical-align: middle;
 	height: 100%;
 	color: white;
+	font-size: 24px;
 	font-family: 'Segoe UI';
 	font-weight: bold;
 	cursor: pointer;
@@ -98,7 +101,6 @@ main{
 	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", "serif";
 	padding-top: 80px;
 	padding-left: 40px;
-	height: 4000px;
 }
 
 main h1{
@@ -116,4 +118,98 @@ main h1 span{
 main p{
 	font-size: 26px;
 	width: 710px;
+	padding-bottom: 40px;
+}
+
+.landing table{
+	padding-bottom: 300px;
+}
+
+.landing p{
+	width: auto;
+	padding-right: 100px;
+	padding-bottom: 10px;
+	font-size: 20px;
+}
+
+.landing button {
+	color: white;
+	font-size: 22px;
+	font-family: 'Segoe UI';
+	cursor: pointer;
+	padding: 8px 25px;
+	border-radius: 18px;
+	background-color: #F8A22F;
+	text-decoration: none;
+}
+
+/* footer style */
+
+footer{
+	width: 100%;
+	height: 245px;
+	display: block;
+	font-family: "Segoe UI";
+	background-color: #1C1C1C;
+	background-image: url(../images/footer.png);
+	background-repeat: no-repeat;
+}
+
+.name_container{
+	height: 80%;
+	display: table;
+	float: left;
+	padding: 0px 5px;
+}
+
+.name_container h1{
+	color: white;
+	font-family: 'Stencil';
+	font-size: 32px;
+	font-weight: 200;
+	display: table-cell;
+	vertical-align: middle;
+	padding-left: 30px;
+}
+
+.name_container h1 span{
+	color: #F8A22F;
+}
+
+.inner_footer{
+	color: white;
+	width: auto;
+	height: 80%;
+	display: table;
+	float: right;
+}
+
+.rectangle{
+	height: 5px;
+	width: 100%;
+	background-color: #AAA;
+	display: table;
+}
+
+.copyright{
+	color: white;
+	float: right;
+	padding-right: 20px;
+}
+
+.footer{
+	display: table-cell;
+	padding: 20px;
+	vertical-align: bottom;
+}
+
+.footer li{
+	padding-top: 8px;
+	padding-right: 80px;
+}
+
+.footer td img{
+	padding: 0px 5px;
+	height: 30px;
+	vertical-align: middle;
 }
